uploading to heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
           <tr>
             <th>Full Url</th>
             <th>Short Url</th>
-            <!-- <th>Clicks</th> -->
+            <th>Clicks</th>
           </tr>
         </thead>
         <tbody>
@@ -67,7 +67,7 @@
                 <%= shortUrl.short %>
               </a>
             </td>
-            <!-- <td><%= shortUrl.clicks %></td> -->
+            <td><%= shortUrl.clicks %></td>
           </tr>
           <% }) %>
         </tbody>
